web/src/styles.sass
@import "styles/variables"

body
  margin: 50px 25px 45px 0

  @media (max-width: $sidebar-visibility-width)
    padding-left: 0

    .navbar-toggle, .navbar-brand
      float: none
      display: inline-block

  @media screen and (max-width: $tablet-resolution)
    margin: 25px 5px 45px

    &.sidebar-open
      overflow: hidden

    .app-container
      margin-top: 55px !important

    .navbar-brand
      margin-left: -15px

  .notifications-container
    line-height: 50px !important

    .notification
      font-size: 16px !important

  .navbar-default
    margin: 0 -25px 20px 0

    @media screen and (max-width: $tablet-resolution)
      margin: 0 -5px 20px -5px

  .tree-children
    overflow: initial

  tree-viewport
    overflow-y: initial !important
    overflow-x: initial !important

  .tree

    .node-wrapper
      padding-left: 5px !important
      align-items: center !important

      &:hover
        background: #f9f9f9

      .node-content-wrapper
        width: 100%
        padding: 5px 8px !important

        @media screen and (max-width: $tablet-resolution)
          padding: 5px 0 5px 5px !important

        &:hover
          background: none !important
          box-shadow: none !important

  .toggle-children-wrapper
    height: $tree-view-node-height
    display: flex
    align-items: center
    padding-top: 5px !important

    .toggle-children
      height: 17px !important
      width: 17px !important
      background-image: url('assets/images/expand-arrow.png') !important

  .validation-error
    color: $error-color
    font-size: 13px

  .btn
    min-width: 75px

    &.btn-link:focus
      outline: none

  @media screen and (min-width: $tablet-resolution + 1)
    screen-driver-mobile-header
      display: none

  @media screen and (max-width: $tablet-resolution)
    screen-driver-header
      display: none

  .container-fluid
    display: flex !important
    justify-content: center !important

    @media screen and (max-width: $tablet-resolution)
      padding-right: 8px
      padding-left: 10px

    .navbar-header
      width: 100%

      @media screen and (max-width: $tablet-resolution)
        padding-left: 0

        .navbar-brand, .navbar-toggle
          float: none

  .switcher
    label
      margin-bottom: 0 !important

  .info-message
    font-size: 17px
    font-style: italic
    color: $gray-color

  .datepicker__input
    font-size: 18px !important
    padding: 3px 12px !important
    border: 1px solid #ccc !important
    border-radius: 4px !important
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075)

    &[disabled]
      background-color: #eee !important

  .datepicker__calendar
    top: 36px !important

.plus-button
  content: url('./assets/images/plus.png')

.edit-button
  content: url('./assets/images/edit.png')

  &.disabled
    content: url('./assets/images/edit-disabled.png')

.refresh-button
  content: url('./assets/images/refresh.png')

.remove-button
  content: url('./assets/images/dustbin.png')

.forced-enabled-button-on
  content: url('./assets/images/flash-on.png')

.forced-enabled-button-off
  content: url('./assets/images/flash-off.png')

.update-client-button
  content: url('./assets/images/update-client.png')

.locked
  content: url('./assets/images/locked.png')

.unlocked
  content: url('./assets/images/unlocked.png')

.sign-out
  content: url('./assets/images/sign-out.png')

